manifests/crc/BYODB-installation/minikube/kruize-crc-minikube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kruize
  labels:
    app: kruize
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kruize
  template:
    metadata:
      labels:
        app: kruize
        name: kruize
    spec:
      containers:
        - name: kruize
          image: quay.io/kruize/autotune_operator:0.11
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          ports:
            - name: kruize-port
              containerPort: 8080
      #          livenessProbe:
      #            exec:
      #              command:
      #                - sh
      #                - -c
      #                - chmod +x /home/autotune/app/target/bin/TestDBConnection && /home/autotune/app/target/bin/TestDBConnection
      #            initialDelaySeconds: 10
      #            periodSeconds: 5
      #            timeoutSeconds: 20
      volumes:
        - name: config-volume
          configMap:
            name: kruizeconfig
---
apiVersion: v1
kind: Service
metadata:
  name: kruize
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
  labels:
    app: kruize
spec:
  type: NodePort
  selector:
    app: kruize
  ports:
    - name: kruize-port
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kruize-ui-nginx-service
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: kruize-ui-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kruize-ui-nginx
  namespace: monitoring
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kruize-ui-nginx
  template:
    metadata:
      labels:
        app: kruize-ui-nginx
    spec:
      containers:
        - name: kruize-ui-nginx-container
          image: quay.io/kruize/kruize-ui:0.0.9
          imagePullPolicy: Always
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kruize-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kruize
      ports:
        - protocol: TCP
          port: 9090
---
